# Video-to-LLM

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
videopipe/: __init__.py  align.py  auto.py  cli.py  events.py  ffmpeg_utils.py  frame_policy.py  ocr.py  ocr_azure.py  ocr_google.py  preprocess.py  probe.py  quality.py  segment.py  transcribe.py  transcribe_assemblyai.py  tuner.py  utils.py
