[project]
name = "video-to-llm"
version = "1.0.0"
description = "Convert screen recordings into LLM-ready structured data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.3",
    "pytesseract>=0.3.10",
    "Pillow>=10.2.0",
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.0",
    "ImageHash>=4.3.1",
    "google-cloud-vision>=3.7.2",
    "assemblyai>=0.37.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.0",
]

[project.scripts]
videopipe = "videopipe.auto:main"

[tool.setuptools.packages.find]
include = ["videopipe*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
